chpt04-immobiliare - fixed issue of send button not appearing on iphone

--- a/chpt04-immobiliare/src/main/frontend/styles.css
+++ b/chpt04-immobiliare/src/main/frontend/styles.css
@@ -11,11 +11,6 @@
   display: none;
 }
 
-#message:valid {
-  ~ #sendMessageButton {
-    display: block;
-  }
-}
 
 .menu-container {
     display: flex;
