--- a/chpt04-immobiliare/src/main/resources/static/css/main.css
+++ b/chpt04-immobiliare/src/main/resources/static/css/main.css
@@ -1465,12 +1465,6 @@ video {
   display: none;
 }
 
-#message:valid {
-  ~ #sendMessageButton {
-    display: block;
-  }
-}
-
 .menu-container {
   display: flex;
   flex-direction: column;
